--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,38 +1,68 @@
 .App {
+  max-width: 1590px;
+  min-width: 500px;
+  height: auto;
+  margin: auto;
+  width: 400px;
+  background-color: white;
   text-align: center;
+  justify-content: space-around;
+  display: block;
 }
+.App > .User_data
+{
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  width: 500px;
+  height: 120px;
+  margin: auto;
   display: flex;
-  flex-direction: column;
+  border-radius: 7%;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  border-bottom: 10px solid white;
+  border-top: 10px solid white;
+  cursor: pointer;
+  background-color: lavender;
+  transition-property: all;
+    transition-duration: 0.4s;
+    transition-timing-function: ease;
+    transition-delay: 0s;
+  box-shadow: lightblue;
+  
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.User_data > .Img
+{
+  width: 100px;
+  height: 100px;
+  margin-left: 10%;
+  border-radius: 50%;
+  padding-left: 15px;
+  padding-right: 15px;
+  box-shadow: none;
+ 
+}
+.User_data > .Name
+{
+  font-size: 1.5rem;
+	font-weight: bold;
+	font-stretch: normal;
+	font-style: normal;
+	line-height: 1.5;
+	letter-spacing: normal;
+  padding-left: 20px;
+  padding-right: 20px;
+  font-size: 500;
+  box-shadow: none;
+  
+ 
+}
+.data{
+  
+  background-color: gold;
+  display: flex;
+  margin: auto;
+  align-items: center;
+  cursor: pointer;
+  text-align: center;
 }
