--- a/my-app/src/Components/user_data.css
+++ b/my-app/src/Components/user_data.css
@@ -12,5 +12,16 @@
 {
     text-align:center;
 }
+.stf
+{
+    display:flex;
+}
+.pr
+{
+    display:block;
+    padding: 20px 20px;
+    align-self: center;
+}
+
 
 
